# mixcons

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  mixcons.sln
mixcons/: mixcons.cpp  mixcons.vcxproj  mixcons.vcxproj.filters  vcpkg.json  virtual_binary.h
mixcons/x64/Release/: CodeAnalysisResultManifest.txt
mixcons/x64/Release/mixcons.tlog/: mixcons.lastbuildstate
